# nasa-space-apps-chicago

./: .gitignore  LICENSE  README.md  docker-compose.yml
data-explorer/: Dockerfile  README.md  pyproject.toml
data-explorer/src/data_explorer/: agent.py  cli.py  web.py
examples/: agent_old.py
mcp/: Dockerfile  README.md  pyproject.toml
mcp/src/space_apps_mcp/: __init__.py  appeears_tools.py  elastic_tools.py  elastic_tools_old.py  job_tools.py  server.py
